# vnibb

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT.md.example  LICENSE  README.md  docker-compose.oracle.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  sprint-v31.md  zeabur.json
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.premium  MONITORING.md  README.md  benchmark_vnstock.py  check_all_tables.py  check_db.py  clean_types.py  debug_screener.py  entrypoint.sh  pyproject.toml  reset_db.py  server_startup.sh  verify_api.py
apps/api/docs/: cophieu68_documentation.md  openbb_architecture.md  sieucophieu_documentation.md  vietcap_documentation.md  vnstock_api_documentation.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  20260114_0144_49a74881719d_add_sentiment_analysis_fields_to_market_.py  20260114_0201_a0fc7ce48b87_add_insider_trading_and_block_trade_.py  20260114_0300_add_sync_status_table.py  20260114_2215_add_performance_indexes.py  20260117_1624_9abd9cdc70b6_add_sync_status_additional_data.py  20260119_2157_202c5b1127fc_sync_schema_and_add_indexes.py  20260124_enable_rls.py  20260124_restore_sync_status.py  20260125_0842_1aaa2a1cf198_initial_schema.py  20260128_1200_add_order_flow_and_derivatives.py  20260128_1330_fix_insider_alerts_alert_type.py  20260128_1340_fix_insider_alerts_severity.py  20260129_0100_add_ai_views.py  20260222_1300_add_ev_sales_to_financial_ratios.py  20260406_1800_add_dashboard_widgets_dashboard_id_index.py  20260520_0900_add_stocks_empty_sync_count.py  20260524_1600_widen_insider_deals_deal_action.py  20260701_0900_add_prediction_markets_and_conflict_constraints.py  20260705_0500_add_prediction_market_snapshots.py  20260705_1830_add_prediction_market_intraday_snapshots.py  20260705_2100_add_prediction_markets_extra_column.py  20260716_1200_add_data_quality_runs.py
apps/api/scripts/: _tmp_widget_health_debug.json  apps_script_bigquery_client.gs  apps_script_client.gs  backfill_fundamentals_v34.py  backfill_historical.py  backfill_historical_v34.py  backfill_mongo_vnstock_data.py  backfill_mongo_vnstock_full_catalog.py  backfill_ohlcv_full.py  backfill_prices_post_tet_2026.py  build_fundamental_screener.py  check_counts.py  data_quality_check.py  dedup_mongo_eod.py  discover_vnstock_unified_ui.py  export_mongo_eod_bronze.py  fill_supabase.py  finstmt_parity.py  fix_vnstock_imports_v2.py  full_seed.py  full_stack_benchmark.py  migrate_supabase_public_to_n6v.py  production_endpoint_probe.py  publish_global_markets_layout.py  publish_prediction_markets_layout.py  query_plan_preflight.py  rebuild_orderflow_from_foreign.py  release_smoke_api.py  reparse_news_dates.py  run_trading_hours_intraday.py  seed_historical.py  seed_screener.py  seed_screener_bulk.py  technical_parity.py  test_simple.py  track2_coverage_audit.py  v32_data_audit.py  v34_backfill_fundamentals_checkpoint.json  v34_coverage_delta.py  v34_data_audit_after.json  (+24 more)
apps/api/scripts/v36_visual_qa/: README.md
apps/api/scripts/vietcap/: README.md  __init__.py  backfill_vietcap.py  maintain_vietcap_corpus.py  vietcap_client.py  vietcap_writers.py
apps/api/tests/: conftest.py
apps/api/tests/test_api/: quant_endpoint_test.py  screener_enrichment_test.py  test_admin_reinforcement.py  test_ai_action_service.py  test_auth.py  (+50 more)
apps/api/vnibb/: scheduler_worker.py
(+1134 files in other folders)
